[package]
name = "janitors"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
fs_extra = "1.3.0"
log = "0.4.27"
notify = {version = "8.0.0", features = ["crossbeam-channel"]}
regex = "1.11.1"
resolve-path = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
stderrlog = "0.6.0"
toml = "0.8.20"
